add field validation for settings

--- a/popup.html
+++ b/popup.html
@@ -27,20 +27,23 @@
                  <div class = "settings-item">
                     <p style = "margin-right: 10px">Number of Tabs: </p>
                     <input class = "setting-field" type ="number" id = "thresholdA" min = 5 max = 60 value = 15 />
-                 </div>
+                    <p class="setting-field" id = "thresholdAError"></p>
+                </div>
             </div>
             <div id="classB">
                 <div class="settings-item">
                     <p style = "margin-right: 10px">Inactive Time Threshold:</p>
-                    <input class = "setting-field" type =  "number" id = "deacyB" min = 5 max = 60 value = 20 />
+                    <input class = "setting-field" type =  "number" id = "decayB" min = 5 max = 60 value = 20 />
+                    <p class="setting-field" id = "decayBError"></p>
                 </div>
                 <div class="settings-item">
                     <p style = "margin-right: 10px">Percent of inactive tabs:</p>
                     <input class = "setting-field" type =  "number" id = "percentB" min = 40 max = 80 value = 60 />
+                    <p class="setting-field" id = "percentBError"></p>
                 </div>
 
             </div>
-            <button class="btn" id="save-settings">Save Settings</button>
+            <button class="btn" id="submit">Save Settings</button>
 
         </div>
         <!-- maybe a list of the most lengthyly opened tabs, and an option to close them -->
