--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,10 @@
             <h1>TabLock</h1>
             <button class="btn" id="settings"><i class="fa fa-gear"></i></button>
         </div>
+        <div class="main" id="tab-count">
+            <h2>Tab Count</h2>
+            <p id="count">0</p>
+        </div>
         <div class="settings" id="settings-panel">
             <h2>Settings</h2>
             <div id="modeswitch">
