--- a/popup.html
+++ b/popup.html
@@ -1,99 +1,105 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="style.css">
-        <script src="popup.js" defer></script>
-        <!-- todo: verify variable vlues-->
-    </head>
-    <body style="width:400px">
 
-        <div class="main" id="header">
-            <h1>TabLock</h1>
-            <button class="btn" id="settings"><i class="fa fa-gear"></i></button>
-        </div>
-        <div class="main" id="tab-count">
-            <h2>Tab Count</h2>
-            <p id="count">0</p>
-        </div>
-        <div class="main" id="oldest-tab-container">
-            <h2>Oldest Tab</h2>
-            <p id="oldest-tab"></p>
-        </div>
-        <div class="settings" id="settings-panel">
-            <h2>Settings</h2>
-            <div id="modeswitch">
-                <!-- <h3 >Mode A</h3>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="popup.js" defer></script>
+    <!-- todo: verify variable vlues-->
+</head>
+
+<body style="width:400px">
+
+    <div class="main" id="header">
+        <h1>TabLock</h1>
+        <button class="btn" id="settings"><i class="fa fa-gear"></i></button>
+    </div>
+    <div class="main" id="tab-count">
+        <h2>Tab Count</h2>
+        <p id="count">0</p>
+    </div>
+    <div class="main" id="oldest-tab-container">
+        <h2>Oldest Tab</h2>
+        <p id="oldest-tab"></p>
+    </div>
+    <div class="settings" id="settings-panel">
+        <h2>Settings</h2>
+        <div id="modeswitch">
+            <!-- <h3 >Mode A</h3>
                 <label class="switch">
                     <input type="checkbox" id="mode-switch">
                     <span class="slider round"></span>
                 </label>
                 <h3>Mode B</h3> -->
-                <p style="margin-right: 10px">Select Mode:</p>
-                <select id="mode-select" class="setting-field">
-                    <option value="A">Mode A</option>
-                    <option value="B">Mode B</option>
-                    <option value="C">Mode C</option>
-                </select>
-            </div>
-            
-            <div id="classA">
-                <!-- mode A is the one where it auto deletes tabs after a certain threshold -->
-                 <div class = "settings-item">
-                    <div class = "input-line">
-                        <p style = "margin-right: 10px">Number of Tabs: </p>
-                        <input class = "setting-field" type ="number" id = "thresholdA" min = 5 max = 60 value = 15 />
+            <p style="margin-right: 10px">Select Mode:</p>
+            <select id="mode-select" class="setting-field">
+                <option value="A">Mode A</option>
+                <option value="B">Mode B</option>
+                <option value="C">Mode C</option>
+            </select>
+        </div>
 
-                    </div>
-                    <p class="" id = "thresholdAError"></p>
+        <div id="classA">
+            <!-- mode A is the one where it auto deletes tabs after a certain threshold -->
+            <div class="settings-item">
+                <div class="input-line">
+                    <p style="margin-right: 10px">Number of Tabs: </p>
+                    <input class="setting-field" type="number" id="thresholdA" min=5 max=60 value=15 />
+
                 </div>
+                <p class="" id="thresholdAError"></p>
             </div>
-            <div id="classB">
-                <div class="settings-item">
-                    <div class = "input-line">
-                    <p style = "margin-right: 10px">Inactive Time Threshold(Minutes):</p>
-                    <input class = "setting-field" type =  "number" id = "decayB" min = 1 max = 30 value = 10 />
+        </div>
+        <div id="classB">
+            <div class="settings-item">
+                <div class="input-line">
+                    <p style="margin-right: 10px">Inactive Time Threshold(Minutes):</p>
+                    <input class="setting-field" type="number" id="decayB" min=1 max=30 value=10 />
 
 
-                    </div>
-                    <p class="" id = "decayBError"></p>
                 </div>
-        
-
-            </div>
-            <div id="classC">
-                <div class="settings-item">
-                    <div class = "input-line">
-                        <p style = "margin-right: 10px">Number of Tabs:</p>
-                        <input class = "setting-field" type = "number" id = "amountC" min = 2 max = 60 value = 50 />
-                    </div>
-                    <p class="" id = "amountCError"></p>
-                </div>
+                <p class="" id="decayBError"></p>
             </div>
 
 
         </div>
-        <div class="main" id = "tabListDiv" >
-            <button class = "dropdown" id="tabList" content="tablistContent"><h2>Tab List ></h2></button>
-            <div class="dropdown-content" id="tabListContent">
-                Temp content
+        <div id="classC">
+            <div class="settings-item">
+                <div class="input-line">
+                    <p style="margin-right: 10px">Number of Tabs:</p>
+                    <input class="setting-field" type="number" id="amountC" min=2 max=60 value=50 />
+                </div>
+                <p class="" id="amountCError"></p>
             </div>
         </div>
-        <div class = "main" id = "modeInfo">
-            <div id="modeDescription">
-                <h2>Mode A</h2>
-                <p>This mode automatically closes tabs after a certain number of open tabs is reached.</p>
-                <p>Must be between 5-60 tabs</p>
-            </div>
-            <div id="modeDescription">
-                <h2>Mode B</h2>
-                <p>This mode closes tabs that have been inactive for a certain amount of time.</p>
-                <p>Must be between 1-60 minutes</p>
-            </div>
-            <div id="modeDescription">
-                <h2>Mode C</h2>
-                <p>This mode locks down the browser if a certain number of tabs are open, and a set amount of tabs need to be closed for the browser to unlock.</p>
-                <p>Must be between 2-60 tabs</p>
-            </div>
+
+
+    </div>
+    <div class="main" id="tabListDiv">
+        <button class="dropdown" id="tabList" content="tablistContent">
+            <h2>Tab List ></h2>
+        </button>
+        <div class="dropdown-content" id="tabListContent">
+            Temp content
         </div>
-    </body>
+    </div>
+    <div class="main" id="modeInfo">
+        <div id="modeDescription">
+            <h2>Mode A</h2>
+            <p>This mode automatically closes tabs after a certain number of open tabs is reached.</p>
+            <p>Must be between 5-60 tabs</p>
+        </div>
+        <div id="modeDescription">
+            <h2>Mode B</h2>
+            <p>This mode closes tabs that have been inactive for a certain amount of time.</p>
+            <p>Must be between 1-60 minutes</p>
+        </div>
+        <div id="modeDescription">
+            <h2>Mode C</h2>
+            <p>This mode locks down the browser if a certain number of tabs are open, and a set amount of tabs need to
+                be closed for the browser to unlock.</p>
+            <p>Must be between 2-60 tabs</p>
+        </div>
+    </div>
+</body>
+
 </html>
