add some features and fixed some bugs

--- a/popup.html
+++ b/popup.html
@@ -65,11 +65,19 @@
         <div id="classC">
             <div class="settings-item">
                 <div class="input-line">
-                    <p style="margin-right: 10px">Number of Tabs:</p>
+                    <p style="margin-right: 10px">Number of Tabs to lock:</p>
                     <input class="setting-field" type="number" id="amountC" min=2 max=60 value=50 />
                 </div>
                 <p class="" id="amountCError"></p>
             </div>
+            <div class="settings-item">
+                <div class="input-line">
+                    <p style="margin-right: 10px">Number of Tabs to unlock:</p>
+                    <input class="setting-field" type="number" id="closeC" min=2 max=60 value=50 />
+                </div>
+                <p class="" id="closeCError"></p>
+            </div>
+
         </div>
 
 
